--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,8 @@
       <a mat-list-item matLine [routerLink]="['button-toggle']">Button toggle</a>
       <a mat-list-item matLine [routerLink]="['chip']">Chip</a>
       <a mat-list-item matLine [routerLink]="['forms']"><mat-icon mat-list-icon>fact_check</mat-icon>Forms</a>
+      <a mat-list-item matLine [routerLink]="['list']">List</a>
+      <a mat-list-item matLine [routerLink]="['menu']">Menu</a>
       <a mat-list-item matLine [routerLink]="['spinners']"><mat-icon mat-list-icon>sync</mat-icon>Spinners</a>
       <a mat-list-item matLine [routerLink]="['typography']"><mat-icon mat-list-icon>text_fields</mat-icon>Typography</a>
     </mat-nav-list>
