--- a/src/themes/arc/_typography.scss
+++ b/src/themes/arc/_typography.scss
@@ -4,7 +4,7 @@
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
-$fontConfig: (
+$theme-typography: (
   display-4: mat.define-typography-level(112px, 112px, 300, 'Roboto', -0.0134em),
   display-3: mat.define-typography-level(56px, 56px, 400, 'Roboto', -0.0089em),
   display-2: mat.define-typography-level(45px, 48px, 400, 'Roboto', 0.0000em),
