--- a/src/themes/_material/_mat-badge.scss
+++ b/src/themes/_material/_mat-badge.scss
@@ -4,14 +4,11 @@
 
 @mixin color($theme) {
 
-  $custom-config: map.get($theme, custom);
-  $custom-colors: map.get($custom-config, colors);
-
-  $palettes: theming.get-color-config($custom-colors);
+  $custom-palettes: theming.get-color-config(map.get($theme, custom));
 
   .mat-badge {
 
-    @each $key, $palette in $palettes {
+    @each $key, $palette in $custom-palettes {
       $contrast: map.get($palette, contrast);
       &[color=#{$key}],
       &-#{$key} {
