--- a/src/themes/_material/_mat-progress-spinner.scss
+++ b/src/themes/_material/_mat-progress-spinner.scss
@@ -8,11 +8,11 @@
   $custom-config: map.get($theme, custom);
   $custom-colors: map.get($custom-config, colors);
 
-  $palettes: theming.get-color-config($custom-colors);
+  $custom-palettes: theming.get-color-config(map.get($theme, custom));
 
   .mat-progress-spinner,
   .mat-spinner {
-    @each $key, $palette in $palettes {
+    @each $key, $palette in $custom-palettes {
       &[color=#{$key}],
       &.mat-#{$key} circle {
         stroke: theming.get-color-from-palette($palette);
