--- a/src/themes/_material/_mat-radio.scss
+++ b/src/themes/_material/_mat-radio.scss
@@ -7,10 +7,10 @@
   $custom-config: map.get($theme, custom);
   $custom-colors: map.get($custom-config, colors);
 
-  $palettes: theming.get-color-config($custom-colors);
+  $custom-palettes: theming.get-color-config(map.get($theme, custom));
 
   .mat-radio-button {
-    @each $key, $palette in $palettes {
+    @each $key, $palette in $custom-palettes {
       &[color=#{$key}],
       &.mat-#{$key} {
         &.mat-radio-checked .mat-radio-outer-circle {
