--- a/src/themes/_material/_theme.scss
+++ b/src/themes/_material/_theme.scss
@@ -6,6 +6,7 @@
 @use "mat-checkbox" as checkbox;
 @use "mat-chip" as chip;
 @use "mat-icon" as icon;
+@use "mat-list" as list;
 @use "mat-menu" as menu;
 @use "mat-progress-bar" as progressBar;
 @use "mat-progress-spinner" as progressSpinner;
@@ -25,6 +26,7 @@
   @include checkbox.theme($theme);
   @include chip.theme($theme);
   @include icon.theme($theme);
+  @include list.theme($theme);
   @include menu.theme($theme);
   @include progressBar.theme($theme);
   @include progressSpinner.theme($theme);
