--- a/src/themes/arc/arc-light.theme.scss
+++ b/src/themes/arc/arc-light.theme.scss
@@ -13,7 +13,7 @@ $dark-disabled-text: rgba($dark-accent-text, 0.38);
 $dark-dividers: rgba($dark-primary-text, 0.12);
 $dark-focused: rgba($dark-primary-text, 0.12);
 
-$mat-light-theme-foreground: (
+$theme-foreground: (
   base:              black,
   divider:           $dark-dividers,
   dividers:          $dark-dividers,
@@ -49,7 +49,7 @@ $dark-bg-tooltip:     lighten(#ECEDED, 20%);
 $dark-bg-alpha-4:     rgba(#ECEDED, 0.04);
 $dark-bg-alpha-12:    rgba(#ECEDED, 0.12);
 
-$mat-light-theme-background: (
+$theme-background: (
   background:               $light-background,
   status-bar:               $light-bg-darker-20,
   app-bar:                  $light-bg-darker-5,
@@ -67,20 +67,21 @@ $mat-light-theme-background: (
   disabled-list-option:     $light-bg-darker-10,
 );
 
-// Compute font config
-@include mat.core($fontConfig);
-
-// Process theme
+// Theme config
 $theme: (
-  primary: $theme-primary,
-  accent: $theme-accent,
-  warn: $theme-warn,
-  is-dark: false,
-  foreground: $mat-light-theme-foreground,
-  background: $mat-light-theme-background,
+  color: (
+    is-dark: true,
+    primary: $theme-primary,
+    accent: $theme-accent,
+    warn: $theme-warn,
+    foreground: $theme-foreground,
+    background: $theme-background,
+  ),
+  density: null,
+  typography: $theme-typography,
   // custom config
   custom: (
-    colors: (
+    color: (
       secondary: $theme-secondary,
       info: $theme-info,
       success: $theme-success,
@@ -88,6 +89,11 @@ $theme: (
     )
   )
 );
+
+//
+// Build theme
+//
+@include mat.core($theme-typography);
 
 .arc-light {
   @include mat.all-component-themes($theme);
