--- a/src/themes/transparent/transparent-light.theme.scss
+++ b/src/themes/transparent/transparent-light.theme.scss
@@ -97,20 +97,21 @@ $theme-background: (
   disabled-list-option:     $dark-bg-lighter-10,
 );
 
-// Compute font config
-@include mat.core($fontConfig);
-
-// Process theme
+// Theme config
 $theme: (
-  primary: $theme-primary,
-  accent: $theme-accent,
-  warn: $theme-warn,
-  is-dark: true,
-  foreground: $theme-foreground,
-  background: $theme-background,
+  color: (
+    is-dark: false,
+    primary: $theme-primary,
+    accent: $theme-accent,
+    warn: $theme-warn,
+    foreground: $theme-foreground,
+    background: $theme-background,
+  ),
+  density: null,
+  typography: $theme-typography,
   // custom config
   custom: (
-    colors: (
+    color: (
       secondary: $theme-secondary,
       info: $theme-info,
       success: $theme-success,
@@ -118,6 +119,11 @@ $theme: (
     )
   )
 );
+
+//
+// Build theme
+//
+@include mat.core($theme-typography);
 
 .transparent-light {
   @include mat.all-component-themes($theme);
