Remove typography module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
       <a mat-list-item matLine [routerLink]="['list']">List</a>
       <a mat-list-item matLine [routerLink]="['menu']">Menu</a>
       <a mat-list-item matLine [routerLink]="['spinners']"><mat-icon mat-list-icon>sync</mat-icon>Spinners</a>
-      <a mat-list-item matLine [routerLink]="['typography']"><mat-icon mat-list-icon>text_fields</mat-icon>Typography</a>
+      <a mat-list-item matLine [routerLink]="['typography']">Typography</a>
     </mat-nav-list>
 
   </mat-sidenav>
