Progress bar and spinner theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,8 @@
       <a mat-list-item matLine [routerLink]="['forms']"><mat-icon mat-list-icon>fact_check</mat-icon>Forms</a>
       <a mat-list-item matLine [routerLink]="['list']">List</a>
       <a mat-list-item matLine [routerLink]="['menu']">Menu</a>
-      <a mat-list-item matLine [routerLink]="['spinners']"><mat-icon mat-list-icon>sync</mat-icon>Spinners</a>
+      <a mat-list-item matLine [routerLink]="['progress-bar']">Progress bar</a>
+      <a mat-list-item matLine [routerLink]="['progress-spinner']">Progress spinner</a>
       <a mat-list-item matLine [routerLink]="['typography']">Typography</a>
     </mat-nav-list>
 
