Add dense list demo

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -26,6 +26,13 @@
     <mat-card-title>Dense</mat-card-title>
     <mat-card-content>
 
+      <div class="caption">List</div>
+      <mat-list dense>
+        <mat-list-item> Pepper </mat-list-item>
+        <mat-list-item> Salt </mat-list-item>
+        <mat-list-item> Paprika </mat-list-item>
+      </mat-list>
+
       <div class="caption">Action list</div>
       <mat-action-list dense>
         <button mat-list-item><mat-icon>done</mat-icon>Save</button>
