--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,12 +27,16 @@
       <a mat-list-item matLine [routerLink]="['badge']">Badge</a>
       <a mat-list-item matLine [routerLink]="['button']">Button</a>
       <a mat-list-item matLine [routerLink]="['button-toggle']">Button toggle</a>
+      <a mat-list-item matLine [routerLink]="['checkbox']">Checkbox</a>
       <a mat-list-item matLine [routerLink]="['chip']">Chip</a>
-      <a mat-list-item matLine [routerLink]="['forms']"><mat-icon mat-list-icon>fact_check</mat-icon>Forms</a>
+      <a mat-list-item matLine [routerLink]="['form-field']">Form field</a>
       <a mat-list-item matLine [routerLink]="['list']">List</a>
       <a mat-list-item matLine [routerLink]="['menu']">Menu</a>
       <a mat-list-item matLine [routerLink]="['progress-bar']">Progress bar</a>
       <a mat-list-item matLine [routerLink]="['progress-spinner']">Progress spinner</a>
+      <a mat-list-item matLine [routerLink]="['radio-button']">Radio button</a>
+      <a mat-list-item matLine [routerLink]="['slide-toggle']">Slide toggle</a>
+      <a mat-list-item matLine [routerLink]="['slider']">Slider</a>
       <a mat-list-item matLine [routerLink]="['typography']">Typography</a>
     </mat-nav-list>
 
