--- a/src/app/form-field/form-field.component.html
+++ b/src/app/form-field/form-field.component.html
@@ -1,4 +1,4 @@
-<h1 class="mat-display-1">Forms</h1>
+<h1 class="mat-display-1">Form field</h1>
 
 <section [formGroup]="form">
 
@@ -23,77 +23,6 @@
         <mat-icon matSuffix>done</mat-icon>
         <mat-hint>Lorem ipsum dolor</mat-hint>
       </mat-form-field>
-
-      <!--    <mat-form-field appearance="fill">-->
-      <!--      <mat-label>Basic fill input</mat-label>-->
-      <!--      <input matInput formControlName="text">-->
-      <!--    </mat-form-field>-->
-
-      <!--    <mat-form-field appearance="standard">-->
-      <!--      <mat-label>Basic standard input</mat-label>-->
-      <!--      <input matInput formControlName="text">-->
-      <!--    </mat-form-field>-->
-
-      <!--    <div class="row">-->
-
-      <!--      <div class="col">-->
-      <!--        <mat-slider-->
-      <!--          *ngFor="let c of allColors"-->
-      <!--          thumbLabel-->
-      <!--          step="1"-->
-      <!--          value="50"-->
-      <!--          min="0"-->
-      <!--          max="100"-->
-      <!--          aria-label="units"-->
-      <!--          [color]="c"></mat-slider>-->
-      <!--      </div>-->
-
-      <!--      <div class="col">-->
-      <!--        <mat-form-field appearance="fill">-->
-      <!--          <mat-label>Favorite food</mat-label>-->
-      <!--          <mat-select>-->
-      <!--            <mat-option *ngFor="let food of foods" [value]="food.value">-->
-      <!--              {{food.viewValue}}-->
-      <!--            </mat-option>-->
-      <!--          </mat-select>-->
-      <!--        </mat-form-field>-->
-
-      <!--        <mat-form-field appearance="fill">-->
-      <!--          <mat-label>Choose a date</mat-label>-->
-      <!--          <input matInput [matDatepicker]="picker">-->
-      <!--          <mat-hint>MM/DD/YYYY</mat-hint>-->
-      <!--          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>-->
-      <!--          <mat-datepicker #picker></mat-datepicker>-->
-      <!--        </mat-form-field>-->
-
-      <!--      </div>-->
-
-      <!--      <div class="col">-->
-      <!--        <mat-slide-toggle-->
-      <!--          *ngFor="let c of allColors"-->
-      <!--          checked-->
-      <!--          [color]="c">Slide {{ c | titlecase }}</mat-slide-toggle>-->
-      <!--      </div>-->
-
-      <!--      <div class="col">-->
-      <!--        <mat-checkbox-->
-      <!--          *ngFor="let c of allColors"-->
-      <!--          checked-->
-      <!--          [color]="c"-->
-      <!--          checked>{{ c | titlecase }} checkbox</mat-checkbox>-->
-      <!--      </div>-->
-
-      <!--      <div class="col">-->
-      <!--        <mat-radio-button-->
-      <!--          *ngFor="let c of allColors"-->
-      <!--          value="c"-->
-      <!--          [color]="$any(c)"-->
-      <!--          [attr.color]="c" checked>{{ c | titlecase }} radio</mat-radio-button>-->
-      <!--      </div>-->
-
-      <!--    </div>-->
-
-
     </mat-card-content>
 
   </mat-card>
