Add form field dense variant

--- a/src/app/form-field/form-field.component.html
+++ b/src/app/form-field/form-field.component.html
@@ -9,20 +9,22 @@
       <mat-form-field appearance="outline">
         <mat-label>Default required input</mat-label>
         <input matInput formControlName="textRequired">
-        <mat-error>Some error message</mat-error>
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Default input</mat-label>
-        <input matInput formControlName="text">
-        <mat-hint>Lorem ipsum dolor</mat-hint>
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Default input</mat-label>
-        <input matInput formControlName="text">
         <mat-icon matPrefix>shopping_cart</mat-icon>
         <mat-icon matSuffix>done</mat-icon>
         <mat-hint>Lorem ipsum dolor</mat-hint>
+        <mat-error>Some error message</mat-error>
       </mat-form-field>
+
+      <div class="caption">Dense variant</div>
+      <mat-form-field appearance="outline" dense>
+        <mat-label>Default input</mat-label>
+        <input matInput formControlName="textRequired">
+        <mat-icon matPrefix>shopping_cart</mat-icon>
+        <mat-icon matSuffix>done</mat-icon>
+        <mat-hint>Lorem ipsum dolor</mat-hint>
+        <mat-error>Some error message</mat-error>
+      </mat-form-field>
+
     </mat-card-content>
 
   </mat-card>
@@ -33,12 +35,20 @@
       <mat-form-field appearance="fill">
         <mat-label>Default required input</mat-label>
         <input matInput formControlName="textRequired">
+        <mat-icon matPrefix>shopping_cart</mat-icon>
+        <mat-icon matSuffix>done</mat-icon>
+        <mat-hint>Lorem ipsum dolor</mat-hint>
         <mat-error>Some error message</mat-error>
       </mat-form-field>
-      <mat-form-field appearance="fill">
+
+      <div class="caption">Dense variant</div>
+      <mat-form-field appearance="fill" dense>
         <mat-label>Default input</mat-label>
-        <input matInput formControlName="text">
+        <input matInput formControlName="textRequired">
+        <mat-icon matPrefix>shopping_cart</mat-icon>
+        <mat-icon matSuffix>done</mat-icon>
         <mat-hint>Lorem ipsum dolor</mat-hint>
+        <mat-error>Some error message</mat-error>
       </mat-form-field>
     </mat-card-content>
   </mat-card>
@@ -49,19 +59,20 @@
       <mat-form-field appearance="standard">
         <mat-label>Default required input</mat-label>
         <input matInput formControlName="textRequired">
-        <mat-error>Some error message</mat-error>
-      </mat-form-field>
-      <mat-form-field appearance="standard">
-        <mat-label>Default input</mat-label>
-        <input matInput formControlName="text">
-        <mat-hint>Lorem ipsum dolor</mat-hint>
-      </mat-form-field>
-      <mat-form-field appearance="standard">
-        <mat-label>Default input</mat-label>
-        <input matInput formControlName="text">
         <mat-icon matPrefix>shopping_cart</mat-icon>
         <mat-icon matSuffix>done</mat-icon>
         <mat-hint>Lorem ipsum dolor</mat-hint>
+        <mat-error>Some error message</mat-error>
+      </mat-form-field>
+
+      <div class="caption">Dense variant</div>
+      <mat-form-field appearance="standard" dense>
+        <mat-label>Default input</mat-label>
+        <input matInput formControlName="textRequired">
+        <mat-icon matPrefix>shopping_cart</mat-icon>
+        <mat-icon matSuffix>done</mat-icon>
+        <mat-hint>Lorem ipsum dolor</mat-hint>
+        <mat-error>Some error message</mat-error>
       </mat-form-field>
     </mat-card-content>
   </mat-card>
@@ -69,15 +80,24 @@
   <mat-card>
     <mat-card-title>Legacy</mat-card-title>
     <mat-card-content>
-      <mat-form-field appearance="legacy">
-        <mat-label>Default required input</mat-label>
-        <input matInput formControlName="textRequired">
-        <mat-error>Some error message</mat-error>
-      </mat-form-field>
+
       <mat-form-field appearance="legacy">
         <mat-label>Default input</mat-label>
-        <input matInput formControlName="text">
+        <input matInput formControlName="textRequired">
+        <mat-icon matPrefix>shopping_cart</mat-icon>
+        <mat-icon matSuffix>done</mat-icon>
         <mat-hint>Lorem ipsum dolor</mat-hint>
+        <mat-error>Some error message</mat-error>
+      </mat-form-field>
+
+      <div class="caption">Dense variant</div>
+      <mat-form-field appearance="legacy" dense>
+        <mat-label>Default input</mat-label>
+        <input matInput formControlName="textRequired">
+        <mat-icon matPrefix>shopping_cart</mat-icon>
+        <mat-icon matSuffix>done</mat-icon>
+        <mat-hint>Lorem ipsum dolor</mat-hint>
+        <mat-error>Some error message</mat-error>
       </mat-form-field>
     </mat-card-content>
   </mat-card>
