--- a/src/themes/_material/_theme.scss
+++ b/src/themes/_material/_theme.scss
@@ -5,6 +5,7 @@
 @use "mat-card" as card;
 @use "mat-checkbox" as checkbox;
 @use "mat-chip" as chip;
+@use "mat-form-field" as formField;
 @use "mat-icon" as icon;
 @use "mat-list" as list;
 @use "mat-menu" as menu;
@@ -25,6 +26,7 @@
   @include card.theme($theme);
   @include checkbox.theme($theme);
   @include chip.theme($theme);
+  @include formField.theme($theme);
   @include icon.theme($theme);
   @include list.theme($theme);
   @include menu.theme($theme);
