--- a/src/themes/arc/arc-dark.theme.scss
+++ b/src/themes/arc/arc-dark.theme.scss
@@ -91,7 +91,7 @@ $theme: (
 //
 @include mat.core($theme-typography);
 
-.arc-dark {
+.arc-dark-theme {
   @include mat.all-component-themes($theme);
   @include customTheme.theme($theme);
 }
