Add tabs dense variant

--- a/src/themes/_material/_mat-tabs.scss
+++ b/src/themes/_material/_mat-tabs.scss
@@ -97,6 +97,19 @@
 }
 
 
+@mixin density($theme) {
+
+  .mat-tab-group[dense],
+  .mat-tab-nav-bar[dense] {
+    .mat-tab-label,
+    .mat-tab-link {
+      height: 40px;
+    }
+  }
+
+}
+
 @mixin theme($theme) {
   @include color($theme);
+  @include density($theme);
 }
