--- a/src/app/tabs/tabs.component.scss
+++ b/src/app/tabs/tabs.component.scss
@@ -4,7 +4,8 @@
   flex-direction: column;
 
   section {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 24px;
   }
 
