Add table and toolbar density

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,7 @@
       <a mat-list-item matLine [routerLink]="['radio-button']">Radio button</a>
       <a mat-list-item matLine [routerLink]="['slide-toggle']">Slide toggle</a>
       <a mat-list-item matLine [routerLink]="['slider']">Slider</a>
+      <a mat-list-item matLine [routerLink]="['table']">Table</a>
       <a mat-list-item matLine [routerLink]="['tabs']">Tabs</a>
       <a mat-list-item matLine [routerLink]="['toolbar']">Toolbar</a>
       <a mat-list-item matLine [routerLink]="['tooltip']">Tooltip</a>
