Update tabs and table demo

--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -29,8 +29,7 @@
         <nav mat-tab-nav-bar [color]="$any(c)" [attr.color]="c" [tabPanel]="tabPanel1">
           <a mat-tab-link *ngFor="let link of links"
              (click)="activeLink = link + c"
-             [active]="activeLink == link + c"> {{ link + ' ' + c}} </a>
-          <a mat-tab-link disabled>Disabled Link</a>
+             [active]="activeLink == link + c"> {{ link }} </a>
         </nav>
         <mat-tab-nav-panel #tabPanel1></mat-tab-nav-panel>
       </div>
@@ -39,8 +38,7 @@
         <nav mat-tab-nav-bar [color]="$any(c)" [backgroundColor]="$any(c)" [attr.color]="c" [tabPanel]="tabPanel2">
           <a mat-tab-link *ngFor="let link of links"
              (click)="activeLink = link + c"
-             [active]="activeLink == link + c"> {{ link + ' ' + c}} </a>
-          <a mat-tab-link disabled>Disabled Link</a>
+             [active]="activeLink == link + c"> {{ link }} </a>
         </nav>
         <mat-tab-nav-panel #tabPanel2></mat-tab-nav-panel>
 
@@ -70,7 +68,6 @@
           <a mat-tab-link *ngFor="let link of links"
              (click)="activeLink = link"
              [active]="activeLink == link"> {{ link}} </a>
-          <a mat-tab-link disabled>Disabled Link</a>
         </nav>
         <mat-tab-nav-panel #tabPanel3></mat-tab-nav-panel>
       </div>
@@ -80,7 +77,6 @@
           <a mat-tab-link *ngFor="let link of links"
              (click)="activeLink = link"
              [active]="activeLink == link"> {{ link }} </a>
-          <a mat-tab-link disabled>Disabled Link</a>
         </nav>
         <mat-tab-nav-panel #tabPanel4></mat-tab-nav-panel>
       </div>
