--- a/src/themes/arc/arc-light.theme.scss
+++ b/src/themes/arc/arc-light.theme.scss
@@ -1,6 +1,8 @@
 
-@use '@angular/material' as mat;
-@use "../_material/theme" as customTheme;
+@use '@angular/material' as theming;
+@use "../_material/theme" as matTheme;
+@use "../_app/theme" as appTheme;
+@use "../_abstract/mixins" as mixins;
 
 @import "colors";
 @import "typography";
@@ -70,7 +72,7 @@ $theme-background: (
 // Theme config
 $theme: (
   color: (
-    is-dark: true,
+    is-dark: false,
     primary: $theme-primary,
     accent: $theme-accent,
     warn: $theme-warn,
@@ -93,9 +95,14 @@ $theme: (
 //
 // Build theme
 //
-@include mat.core($theme-typography);
+@include theming.core($theme-typography);
+
+:root {
+  @include mixins.export_theme_colors($theme);
+}
 
 .arc-light-theme {
-  @include mat.all-component-themes($theme);
-  @include customTheme.theme($theme);
+  @include theming.all-component-themes($theme);
+  @include matTheme.theme($theme);
+  @include appTheme.theme($theme);
 }
