--- a/src/themes/arc/arc-dark.theme.scss
+++ b/src/themes/arc/arc-dark.theme.scss
@@ -1,6 +1,8 @@
 
-@use '@angular/material' as mat;
-@use "../_material/theme" as customTheme;
+@use '@angular/material' as theming;
+@use "../_material/theme" as matTheme;
+@use "../_app/theme" as appTheme;
+@use "../_abstract/mixins" as mixins;
 
 @import "colors";
 @import "typography";
@@ -89,9 +91,14 @@ $theme: (
 //
 // Build theme
 //
-@include mat.core($theme-typography);
+@include theming.core($theme-typography);
+
+:root {
+  @include mixins.export_theme_colors($theme);
+}
 
 .arc-dark-theme {
-  @include mat.all-component-themes($theme);
-  @include customTheme.theme($theme);
+  @include theming.all-component-themes($theme);
+  @include matTheme.theme($theme);
+  @include appTheme.theme($theme);
 }
