Add bootstrap utilities

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,18 @@ body, html {
   min-width: 100vw;
 }
 
+//
+// Bootstrap utilities
+//
+$spacer: 16px;
+$spacers: (
+  0: 0,
+  1: $spacer * .25, // 4
+  2: $spacer * .5, // 8
+  3: $spacer, // 16
+  4: $spacer * 1.5, // 24
+  5: $spacer * 2, // 32
+  6: $spacer * 3, // 48
+);
+
+@import "../node_modules/bootstrap/scss/bootstrap-utilities";
